--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@mui/x-date-pickers": "^8.22.0",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
